Continue work on processing data tables

--- a/experiments/statcan_products/process_product_test.ipynb
+++ b/experiments/statcan_products/process_product_test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 209,
    "id": "98859cd6-6fa4-4aef-a113-455699524fae",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,8 @@
     "output_folder = f\"{data_folder}/output\"\n",
     "\n",
     "\n",
-    "if not os.path.exists(\"processing.db\"):\n",
-    "    con = sqlite3.connect('processing.db')\n",
+    "if not os.path.exists(f\"{data_folder}/processing.db\"):\n",
+    "    con = sqlite3.connect(f\"{data_folder}/processing.db\")\n",
     "    cur = con.cursor()\n",
     "    cur.executescript(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS downloaded (\n",
@@ -55,13 +55,13 @@
     "    \"\"\")\n",
     "    con.commit()\n",
     "else:\n",
-    "    con = sqlite3.connect('processing.db')\n",
+    "    con = sqlite3.connect(f\"{data_folder}/processing.db\")\n",
     "    cur = con.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 210,
    "id": "28ac4c01-c1c5-427f-bb2c-0da99a4c5591",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 211,
    "id": "9daa94f4-16c9-4d8b-951e-3d5d38eb618f",
    "metadata": {},
    "outputs": [],
@@ -93,12 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 212,
    "id": "0af9a4b3-7b59-460b-b933-504919d4bd2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_last_downloaded(product_id):\n",
+    "    \"\"\"\n",
+    "    Updates SQLite database with the last time the table was updated\n",
+    "    The datetime is in Eastern timezone, so have to convert to UTC to\n",
+    "    be consistent with https://www150.statcan.gc.ca/t1/wds/rest/getAllCubesListLite\n",
+    "    \"\"\"\n",
     "    filepath = f\"{input_folder}/metadata/{product_id}.json\"\n",
     "    print(f\"Reading metadata {filepath}\")\n",
     "    with open(filepath, 'r') as fp:\n",
@@ -123,7 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 213,
+   "id": "4b7996d2-75ab-4173-a17a-64fb7ab63740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_last_processed(product_id):\n",
+    "    time_finished_processing = datetime.now().isoformat()\n",
+    "    cur.execute(\"UPDATE downloaded SET last_processed = ? WHERE product_id = ?\", (time_finished_processing, product_id))\n",
+    "    con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "id": "23cbabc3-0d4b-4e28-a4df-b2c5e8c7ea8b",
    "metadata": {},
    "outputs": [],
@@ -166,159 +184,23 @@
     "    for result in results:\n",
     "        product_id = result[0]\n",
     "        print(f\"Updating product_id: {product_id}\")\n",
+    "        download_cube(product_id)\n",
     "        process_cube(product_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "c0d46f38-242c-4685-b8b6-4e046c23aec5",
+   "execution_count": 215,
+   "id": "dc5573ef-734b-44d8-a4c4-0df19d655975",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"\"\"\n",
-    "    SELECT a.product_id, a.last_updated, b.last_updated\n",
-    "    FROM downloaded AS a,\n",
-    "         cubes AS b\n",
-    "    WHERE a.product_id = b.product_id\n",
-    "    AND b.last_updated > a.last_updated\n",
-    "\"\"\")\n",
-    "difference = pd.DataFrame(cur.fetchall(), columns=[\"product_id\", \"release_time_metadata\", \"release_time_cubelist\"])"
+    "#update_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "a5e12a7a-9891-4d58-9368-e31b274feb1d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>release_time_metadata</th>\n",
-       "      <th>release_time_cubelist</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10100006</td>\n",
-       "      <td>2025-05-21T12:30:00+00:00</td>\n",
-       "      <td>2025-06-17T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10100108</td>\n",
-       "      <td>2025-05-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-12T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10100132</td>\n",
-       "      <td>2025-06-06T12:30:00+00:00</td>\n",
-       "      <td>2025-06-13T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10100136</td>\n",
-       "      <td>2025-06-10T12:30:00+00:00</td>\n",
-       "      <td>2025-06-16T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10100138</td>\n",
-       "      <td>2025-06-06T12:30:00+00:00</td>\n",
-       "      <td>2025-06-13T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>38100235</td>\n",
-       "      <td>2025-03-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-12T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>38100236</td>\n",
-       "      <td>2025-03-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-12T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>38100237</td>\n",
-       "      <td>2025-03-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-12T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>38100238</td>\n",
-       "      <td>2025-03-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-12T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>38100164</td>\n",
-       "      <td>2023-09-13T12:30:00+00:00</td>\n",
-       "      <td>2025-06-17T12:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>97 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   product_id      release_time_metadata      release_time_cubelist\n",
-       "0    10100006  2025-05-21T12:30:00+00:00  2025-06-17T12:30:00+00:00\n",
-       "1    10100108  2025-05-13T12:30:00+00:00  2025-06-12T12:30:00+00:00\n",
-       "2    10100132  2025-06-06T12:30:00+00:00  2025-06-13T12:30:00+00:00\n",
-       "3    10100136  2025-06-10T12:30:00+00:00  2025-06-16T12:30:00+00:00\n",
-       "4    10100138  2025-06-06T12:30:00+00:00  2025-06-13T12:30:00+00:00\n",
-       "..        ...                        ...                        ...\n",
-       "92   38100235  2025-03-13T12:30:00+00:00  2025-06-12T12:30:00+00:00\n",
-       "93   38100236  2025-03-13T12:30:00+00:00  2025-06-12T12:30:00+00:00\n",
-       "94   38100237  2025-03-13T12:30:00+00:00  2025-06-12T12:30:00+00:00\n",
-       "95   38100238  2025-03-13T12:30:00+00:00  2025-06-12T12:30:00+00:00\n",
-       "96   38100164  2023-09-13T12:30:00+00:00  2025-06-17T12:30:00+00:00\n",
-       "\n",
-       "[97 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "difference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 228,
    "id": "144e3716-b0e7-4a39-9a25-ededea506f4f",
    "metadata": {},
    "outputs": [],
@@ -368,6 +250,9 @@
     "    return result\n",
     "\n",
     "def download_cube(product_id, language=\"en\"):\n",
+    "    \"\"\"\n",
+    "    Downloads the English CSV for a specific table\n",
+    "    \"\"\"\n",
     "    download_url = f\"https://www150.statcan.gc.ca/t1/wds/rest/getFullTableDownloadCSV/{product_id}/en\"\n",
     "    response = requests.get(download_url).json()\n",
     "    zip_url = response['object']\n",
@@ -388,6 +273,11 @@
     "        progress_bar.close()\n",
     "        \n",
     "def process_cube(product_id, language=\"en\"):\n",
+    "    cur.execute(\"SELECT product_id FROM downloaded WHERE product_id = ?\", (product_id,))\n",
+    "    result = cur.fetchone()\n",
+    "    if result:\n",
+    "        print(f\"Already processed {product_id}\")\n",
+    "        return\n",
     "    extract_zipfile(product_id, language)\n",
     "    \"\"\"\n",
     "    The pandas column reader is better than the Polars one\n",
@@ -395,12 +285,11 @@
     "    https://www150.statcan.gc.ca/n1/tbl/csv/98100404-eng.zip\n",
     "    \"\"\"\n",
     "    # Get metadata\n",
-    "    metadata_file = f\"{input_folder}/metadata/{product_id}.json\"\n",
-    "    metadata = get_cube_metadata(product_id)\n",
-    "    print(f\"Writing metadata file {metadata_file}\")\n",
-    "    with open(metadata_file, \"w\") as outfile:\n",
-    "        json.dump(metadata, outfile)\n",
-    "    update_last_downloaded(product_id)\n",
+    "    #metadata_file = f\"{input_folder}/metadata/{product_id}.json\"\n",
+    "    #metadata = get_cube_metadata(product_id)\n",
+    "    #print(f\"Writing metadata file {metadata_file}\")\n",
+    "    #with open(metadata_file, \"w\") as outfile:\n",
+    "    #    json.dump(metadata, outfile)\n",
     "    # Read CSV using Pandas\n",
     "    product_csv = f\"{scratch_folder}/{product_id}.csv\"\n",
     "    parameters = {\n",
@@ -410,22 +299,32 @@
     "    print(f\"Reading {product_csv} as a Pandas dataframe\")\n",
     "    df = pd.read_csv(product_csv, **parameters)\n",
     "    df = convert_to_lowest_type(df)\n",
+    "    # Fix mixed types. This happened in productId 11100147\n",
+    "    for col in df.select_dtypes(include=[\"object\"]).columns:\n",
+    "        types_in_col = df[col].map(type).unique()\n",
+    "        # If there's any non-str type in the column\n",
+    "        if any(t != str for t in types_in_col):\n",
+    "            print(f\"Fixing mixed types in column: {col} — types found: {types_in_col}\")\n",
+    "            # Replace non-str values with None\n",
+    "            df[col] = df[col].where(df[col].map(type) == str, None).astype(\"string\")\n",
     "    print(\"Import Pandas dataframe as a Polars dataframe\")\n",
     "    df = pl.from_pandas(df)\n",
     "    output_parquet = f\"{output_folder}/{language}/{product_id}.parquet\"\n",
     "    print(f\"Exporting dataframe as parquet to {output_parquet}\")\n",
-    "    df.write_parquet(f\"{output_folder}/{language}/{product_id}.parquet\",\n",
+    "    df.write_parquet(output_parquet,\n",
     "                     compression='zstd',\n",
     "                     compression_level=22)\n",
     "    # Remove the scratch files\n",
     "    print(\"Removing scratch files\")\n",
     "    os.remove(f\"{scratch_folder}/{product_id}.csv\")\n",
-    "    os.remove(f\"{scratch_folder}/{product_id}_MetaData.csv\")   \n"
+    "    os.remove(f\"{scratch_folder}/{product_id}_MetaData.csv\")\n",
+    "    update_last_downloaded(product_id)\n",
+    "    update_last_processed(product_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 229,
    "id": "6be0842e-c1e0-45b4-90e5-0be28b963aed",
    "metadata": {},
    "outputs": [
@@ -433,54 +332,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting /data/tables/input/en/10100111.zip to /data/tables/scratch\n",
-      "Writing metadata file /data/tables/input/metadata/10100111.json\n",
-      "Reading metadata /data/tables/input/metadata/10100111.json\n",
-      "('10100111', '2025-06-18T12:30:00+00:00')\n",
-      "Reading /data/tables/scratch/10100111.csv as a Pandas dataframe\n",
-      "Converting dataframe to optimal data types\n",
-      "Import Pandas dataframe as a Polars dataframe\n",
-      "Exporting dataframe as parquet to /data/tables/output/en/10100111.parquet\n",
-      "Removing scratch files\n"
+      "Already processed 11100147\n"
      ]
     }
    ],
    "source": [
-    "process_cube(\"10100111\")"
+    "process_cube(\"11100147\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "id": "8a193195-bfa6-4df3-adab-0f88025276da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://www150.statcan.gc.ca/n1/tbl/csv/38100164-eng.zip to /data/tables/input/en/38100164.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/tables/input/en/38100164.zip: 100%|██████████████████| 980k/980k [00:00<00:00, 1.27MB/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "download_cube(\"38100164\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc4ae317-3e3e-4c27-a2fe-7e6bd12f673f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
